# modded-nanogpt

./: LOW_RANK_NEWTON_README.md  README.md  low_rank_newton.py  modal_train.py  pyproject.toml  run_experiments.sh  simbaw_optimizer.py  test.html  test_low_rank_newton.py  train_gpt.py
