[project]
name = "modded-nanogpt"
version = "0.0.0"
description = "Modded-NanoGPT speedrun trainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "tqdm",
    "huggingface-hub",
    "kernels",
    "modal>=1.2.2",
    "wandb>=0.23.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
modal = ["modal"]
train = ["torch"]
